--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -2,6 +2,9 @@
   text-align: center;
 }
 
+body {
+  background-color: white;
+}
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
