--- a/client/src/styles/_custom_bootstrap.scss
+++ b/client/src/styles/_custom_bootstrap.scss
@@ -1,10 +1,10 @@
 // Bootstrap brand color customization
 // Change it to the color you prefer
-$brand-primary: #425cbb !default;
+$brand-primary: #3B86CD !default;
 $brand-success: #4caf50 !default;
 $brand-danger: #f44336 !default;
 $brand-warning: #ff9800 !default;
 $brand-info: #00bcd4 !default;
-$brand-rose: #e91e63 !default;
+$brand-rose: #CE1017 !default;
 
 
